--- a/Project-20/SOS/ORS/template/RoleList.html
+++ b/Project-20/SOS/ORS/template/RoleList.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    {% load static %}
+    <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
 </head>
 <body>
     {% include "Header.html" %}
@@ -35,7 +37,7 @@
 
         <table border="1%" width="100%">
             <tr>
-                <th><input type="checkbox"></th>
+                <th><input type="checkbox" id="selectall"></th>
                 <th>S. No.</th>
                 <th>Name</th>
                 <th>Description</th>
@@ -44,7 +46,7 @@
             {% for l in pageList %}
             <tr>
                 <td align="center">
-                    <input type="checkbox" name="ids" value="{{ l.id }}">
+                    <input type="checkbox" class="case" name="ids" value="{{ l.id }}">
                 </td>
                 <td align="center">{{ form.index|add:forloop.counter }}</td>
                 <td align="center">{{ l.name }}</td>
