--- a/Project-20/SOS/ORS/template/UserList.html
+++ b/Project-20/SOS/ORS/template/UserList.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>User List</title>
+    {% load static %}
+    <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
 </head>
 <body>
     {% include "Header.html" %}
@@ -37,7 +39,7 @@
 
         <table border="1" width="100%">
             <tr>
-                <th><input type="checkbox"></th>
+                <th><input type="checkbox" id="selectall"></th>
                 <th>S. No.</th>
                 <th>First Name</th>
                 <th>Last Name</th>
@@ -51,7 +53,7 @@
             </tr>
             {% for l in pageList %}
             <tr>
-                <td align="center"><input type="checkbox" name="ids" value="{{ l.id }}"></td>
+                <td align="center"><input type="checkbox" class="case" name="ids" value="{{ l.id }}"></td>
                 <td align="center">{{ form.index|add:forloop.counter }}</td>
                 <td align="center">{{ l.firstName }}</td>
                 <td align="center">{{ l.lastName }}</td>
