--- a/Project-20/SOS/ORS/template/MarksheetList.html
+++ b/Project-20/SOS/ORS/template/MarksheetList.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>User List</title>
+    {% load static %}
+    <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
 </head>
 <body>
     {% include "Header.html" %}
