--- a/Project-20/SOS/ORS/template/Welcome.html
+++ b/Project-20/SOS/ORS/template/Welcome.html
@@ -17,7 +17,7 @@
     <h1 align="center">
         <font size="7px" color="navy">Online Result System</font>
         <br><br>
-        <font color="red">Project-20</font>
+        <font color="red">Project-20-2025</font>
     </h1>
 </div>
 </body>
