--- a/Project-20/SOS/ORS/template/TimeTable.html
+++ b/Project-20/SOS/ORS/template/TimeTable.html
@@ -23,8 +23,7 @@
                 <tr>
                     <th>Exam Time:</th>
                     <td>
-                         <select name="examTime">
-                            <option value="{{form.examTime}}">{{form.examTime}}</option>
+                         <select name="examTime"style="width: 100%;">
                             <option>9:00AM to 1:00PM</option>
                             <option>2:00PM to 4:00PM</option>
                             <option>4:00PM to 7:00PM</option>
@@ -41,43 +40,58 @@
                     <th>Course:</th>
                     <td>
                         <select name="courseId" style="width:100%">
-                            <option value="{{form.courseId}}">{{ form.courseName }}</option>
+                            <option value="">Select Course</option>
                             {% for course in courseList %}
-                                <option value="{{ course.id }}">{{ course.name }}</option>
+                            <option value="{{ course.id }}" {% if form.courseId|stringformat:"s" == course.id|stringformat:"s" %}selected{% endif %}>
+
+                            {{ course.name }}
+                            </option>
                             {% endfor %}
                         </select>
                     </td>
-                    <td style="position: fixed; color: red;">{{ form.inputError.courseId }}</td>
+                    <td style="color: red;">{{ form.inputError.courseId }}</td>
                 </tr>
-                 <tr>
+
+                <tr>
                     <th>Subject:</th>
                     <td>
                         <select name="subjectId" style="width:100%">
-                            <option value="{{form.subjectId}}">{{ form.subjectName }}</option>
+                            <option value="">Select Subject</option>
                             {% for subject in subjectList %}
-                                <option value="{{ subject.id }}">{{ subject.name }}</option>
+                            <option value="{{ subject.id }}" {% if form.subjectId|stringformat:"s" == subject.id|stringformat:"s" %}selected{% endif %}>
+                            {{ subject.name }}
+                            </option>
                             {% endfor %}
                         </select>
                     </td>
-                    <td style="position: fixed; color: red;">{{ form.inputError.subjectId }}</td>
+                    <td style="color: red;">{{ form.inputError.subjectId }}</td>
                 </tr>
                 <tr>
                     <th>Semester:</th>
                     <td>
                         <select name="semester" style="width:100%">
-                            <option value="{{form.semester}}">{{form.semester}}</option>
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                            <option value="6">6</option>
-                            <option value="7">7</option>
-                            <option value="8">8</option>
+                            <option value="">Select Semester</option>
+                            <option value="1" {% if form.semester|stringformat:"s" == "1" %}selected{% endif %}>1</option>
+
+                            <option value="2" {% if form.semester|stringformat:"s" == "2" %}selected{% endif %}>2</option>
+
+                            <option value="3" {% if form.semester|stringformat:"s" == "3" %}selected{% endif %}>3</option>
+
+                            <option value="4" {% if form.semester|stringformat:"s" == "4" %}selected{% endif %}>4</option>
+
+                            <option value="5" {% if form.semester|stringformat:"s" == "5" %}selected{% endif %}>5</option>
+
+                            <option value="6" {% if form.semester|stringformat:"s" == "6" %}selected{% endif %}>6</option>
+
+                            <option value="7" {% if form.semester|stringformat:"s" == "7" %}selected{% endif %}>7</option>
+
+                            <option value="8" {% if form.semester|stringformat:"s" == "8" %}selected{% endif %}>8</option>
+
                         </select>
                     </td>
-                    <td style="position: fixed; color: red;">{{ form.inputError.semester }}</td>
+                    <td style="color: red;">{{ form.inputError.semester }}</td>
                 </tr>
+
                 <tr>
                     <th></th>
                     <td><input type="submit" value="save"></td>
